Add admin, Zoho email, deploy env vars

--- a/.env.example
+++ b/.env.example
@@ -19,3 +19,10 @@ DELIVERY_TIMEOUT_SEC=10
 
 # Server (Render sets PORT automatically)
 PORT=10000
+
+# Admin: password to access /admin (control which emails are sent and to whom)
+ADMIN_PASSWORD=
+
+# Zoho Mail (free zohomail.com): emails sent from this address
+ZOHO_EMAIL=hello.aevel@zohomail.com
+ZOHO_PASSWORD=
