--- a/render.yaml
+++ b/render.yaml
@@ -7,6 +7,14 @@ services:
     envVars:
       - key: PYTHON_VERSION
         value: "3.10"
+      - key: SECRET_KEY
+        generateValue: true
+      - key: ADMIN_PASSWORD
+        sync: false
+      - key: ZOHO_EMAIL
+        sync: false
+      - key: ZOHO_PASSWORD
+        sync: false
       - key: GEMINI_API_KEY
         sync: false
       - key: DATA_SOURCE_PATH
